[gd_scene load_steps=23 format=3 uid="uid://cnk6o3iq6l2pg"]

[ext_resource type="Texture2D" uid="uid://smgarqhrhkfc" path="res://graphics/ui/store/background.png" id="1_63iy8"]
[ext_resource type="Script" path="res://scenes/navigation/settings/settings.gd" id="1_wt7e2"]
[ext_resource type="Texture2D" uid="uid://bgjvyrvkwrcp2" path="res://graphics/navigation/store/store_panel@2x.png" id="2_hnjgi"]
[ext_resource type="FontFile" uid="uid://cj1ai2aqjg7ro" path="res://themes/assets/MochiyPopOne-Regular.ttf" id="4_n0wcy"]
[ext_resource type="Theme" uid="uid://7happngt6m6v" path="res://themes/for_title_lbl.tres" id="4_padj5"]
[ext_resource type="FontVariation" uid="uid://b77ehsqg6w4nl" path="res://themes/assets/settings_mochiy_fontvariation.tres" id="5_5u8ul"]
[ext_resource type="Texture2D" uid="uid://bsaevsbtq21rg" path="res://graphics/ui/buttons/2x/exitmode_btn@2x.png" id="5_45avk"]
[ext_resource type="Texture2D" uid="uid://qsoomwci6h4c" path="res://graphics/navigation/settings/slider@2x.png" id="5_u25ld"]
[ext_resource type="Texture2D" uid="uid://bulj4w27ctfa3" path="res://graphics/ui/buttons/2x/exitPressed_btn@2x.png" id="6_8ypn1"]
[ext_resource type="Theme" uid="uid://dmrrlilds2s0i" path="res://themes/hslider_theme.tres" id="6_flv43"]
[ext_resource type="Texture2D" uid="uid://04y10xf13iw7" path="res://graphics/navigation/settings/tingog_grabber@2x.png" id="9_2oqod"]
[ext_resource type="Texture2D" uid="uid://ck7qrrt55j3ws" path="res://graphics/ui/icons/account_btn@2x.png" id="9_wt604"]
[ext_resource type="Script" path="res://scenes/navigation/settings/volume_control.gd" id="10_18041"]
[ext_resource type="Texture2D" uid="uid://bcj5oicry6cnf" path="res://graphics/ui/icons/akawnt_btn_disabled.png" id="11_4evfi"]
[ext_resource type="Texture2D" uid="uid://bfnrm3hl41vri" path="res://graphics/ui/buttons/2x/accountPressed_btn@2x.png" id="14_ym3xt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5c4wa"]
content_margin_left = 7.0
content_margin_top = 5.0
content_margin_right = 7.0
content_margin_bottom = 13.0
texture = ExtResource("2_hnjgi")

[sub_resource type="Theme" id="Theme_gkpco"]
Panel/styles/panel = SubResource("StyleBoxTexture_5c4wa")

[sub_resource type="Theme" id="Theme_y5hgh"]
Label/font_sizes/font_size = 25
Label/fonts/font = ExtResource("5_5u8ul")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha3qb"]
bg_color = Color(0.952941, 0.25098, 0.258824, 1)
border_width_bottom = 6
border_color = Color(0.423529, 0.0509804, 0.0705882, 1)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pe00"]
bg_color = Color(0.737255, 0.2, 0.188235, 1)
border_color = Color(0.403922, 0.0862745, 0.0823529, 1)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 12

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fnckv"]
texture = ExtResource("5_u25ld")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 16.0
texture_margin_bottom = 14.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 14.0
modulate_color = Color(0.957945, 0.820391, 0.744984, 0.756863)

[sub_resource type="Theme" id="Theme_3g2y4"]
HSlider/constants/center_grabber = 0
HSlider/constants/grabber_offset = 0
HSlider/icons/grabber = ExtResource("9_2oqod")
HSlider/icons/grabber_disabled = ExtResource("9_2oqod")
HSlider/icons/grabber_highlight = ExtResource("9_2oqod")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_ha3qb")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_5pe00")
HSlider/styles/slider = SubResource("StyleBoxTexture_fnckv")

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_wt7e2")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_63iy8")
expand_mode = 1

[node name="SettingsPnl" type="Panel" parent="."]
custom_minimum_size = Vector2(710, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_gkpco")

[node name="SettingsLbl" type="Label" parent="SettingsPnl"]
custom_minimum_size = Vector2(358, 111)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = -50.0
offset_right = 179.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_padj5")
theme_override_font_sizes/font_size = 43
text = "USBANANAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseBtn" type="TextureButton" parent="SettingsPnl"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_top = -56.0
offset_right = 96.0
offset_bottom = 45.0
grow_vertical = 2
texture_normal = ExtResource("5_45avk")
texture_pressed = ExtResource("6_8ypn1")
stretch_mode = 3

[node name="SettingsVbox" type="VBoxContainer" parent="SettingsPnl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112676
anchor_top = 0.136842
anchor_right = 0.897183
anchor_bottom = 0.884211
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TingogVbox" type="VBoxContainer" parent="SettingsPnl/SettingsVbox"]
layout_mode = 2
theme_override_constants/separation = -7

[node name="TingogLbl" type="Label" parent="SettingsPnl/SettingsVbox/TingogVbox"]
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_y5hgh")
theme_override_colors/font_color = Color(0.980392, 0.686275, 0.231373, 1)
theme_override_colors/font_shadow_color = Color(0.431373, 0.176471, 0.0431373, 1)
theme_override_fonts/font = ExtResource("4_n0wcy")
text = "Tingog"

[node name="TingogHsldr" type="HSlider" parent="SettingsPnl/SettingsVbox/TingogVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_3g2y4")
max_value = 1.0
step = 0.001
script = ExtResource("10_18041")
bus_name = "sfx"

[node name="MusikaVbox" type="VBoxContainer" parent="SettingsPnl/SettingsVbox"]
layout_mode = 2
theme_override_constants/separation = -7

[node name="MusikaLbl" type="Label" parent="SettingsPnl/SettingsVbox/MusikaVbox"]
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_y5hgh")
theme_override_colors/font_color = Color(0.980392, 0.686275, 0.231373, 1)
theme_override_colors/font_shadow_color = Color(0.431373, 0.176471, 0.0431373, 1)
theme_override_fonts/font = ExtResource("4_n0wcy")
text = "Musika"

[node name="MusikaHsldr" type="HSlider" parent="SettingsPnl/SettingsVbox/MusikaVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("6_flv43")
max_value = 1.0
step = 0.001
script = ExtResource("10_18041")
bus_name = "music"

[node name="AccountBtn" type="TextureButton" parent="SettingsPnl/SettingsVbox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("9_wt604")
texture_pressed = ExtResource("14_ym3xt")
texture_disabled = ExtResource("11_4evfi")
stretch_mode = 3

[connection signal="pressed" from="SettingsPnl/CloseBtn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="SettingsPnl/SettingsVbox/AccountBtn" to="." method="_on_account_btn_pressed"]
